Renamed .center-block class to just ".centered"

--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -203,7 +203,7 @@
 | Block alignment
 |-----------------------------------------------------------------------------------------------------------------------
 */
-.center-block
+.centered
   margin-left auto
   margin-right auto
 
