Added .tight modifying class to input elements

--- a/src/global.styl
+++ b/src/global.styl
@@ -276,6 +276,7 @@ input_corner_radius = 6px
 input_font_size = standard_font_size
 input_line_height = standard_line_height
 input_padding = 12px 10px
+input_padding_tight = 6px 10px
 input_transition = all 0.2s
 input_disabled_color = pale
 input_disabled_border_color = light
