Switched tight and slim classes for buttons for semantic reasons

--- a/src/style.styl
+++ b/src/style.styl
@@ -498,15 +498,15 @@ select:focus
       color primary_hover
   &.block
     width 100%
-  &.slim
-    padding-top btn_slim
-    padding-bottom btn_slim
+  &.tight
+    padding-top btn_tight
+    padding-bottom btn_tight
   &.fat
     padding-top btn_fat
     padding-bottom btn_fat
-  &.tight
-    padding-left btn_tight
-    padding-right btn_tight
+  &.slim
+    padding-left btn_slim
+    padding-right btn_slim
   &.wide
     padding-left btn_wide
     padding-right btn_wide
