Introduced new "ui" stylesheet and changed loading order

--- a/src/global.styl
+++ b/src/global.styl
@@ -276,7 +276,7 @@ input_corner_radius = 6px
 input_font_size = standard_font_size
 input_line_height = standard_line_height
 input_padding = 12px 10px
-input_padding_tight = 6px 10px
+input_padding_narrow = 6px 10px
 input_transition = all 0.2s
 input_disabled_color = pale
 input_disabled_border_color = light
@@ -304,8 +304,8 @@ btn_font_size = t_small
 btn_line_height = standard_font_size /* By using the font size we ensure the same height for buttons as for inputs */
 btn_padding = 12px 18px
 btn_slim = 4px
-btn_tight = 8px
-btn_fat = 16px
+btn_narrow = 8px
+btn_extended = 16px
 btn_wide = 30px
 btn_transition = all .3s ease
 btn_letter_spacing = letter_spacing_s
