Fixed color hover state classes

--- a/src/style.styl
+++ b/src/style.styl
@@ -89,44 +89,57 @@ a
   &.violet:hover
       color c_violet_hover
 
-/* Hover state text color overrides */
-.primary
+/* Hover state overrides for text color */
+.primary--hover,
+a.primary--hover
   color primary
 
-.secondary
+.secondary--hover,
+a.secondary--hover
   color secondary
 
-.tertiary
+.tertiary--hover,
+a.tertiary--hover
   color tertiary
 
-.pale
+.pale--hover,
+a.pale--hover
   color pale
 
-.light
+.light--hover,
+a.light--hover
   color light
 
-.white
+.white--hover,
+a.white--hover
   color c_white
 
-.black
+.black--hover,
+a.black--hover
   color c_black
 
-.red
+.red--hover,
+a.red--hover
   color c_red
 
-.green
+.green--hover,
+a.green--hover
   color c_green
 
-.yellow
+.yellow--hover,
+a.yellow--hover
   color c_yellow
 
-.orange
+.orange--hover,
+a.orange--hover
   color c_orange
 
-.blue
+.blue--hover,
+a.blue--hover
   color c_blue
 
-.violet
+.violet--hover,
+a.violet--hover
   color c_violet
 
 /* Background colors */
@@ -167,6 +180,46 @@ a
   background-color c_blue
 
 .violet-bg
+  background-color c_violet
+
+/* Hover state overrides for background color */
+.primary-bg--hover
+  background-color primary
+
+.secondary-bg--hover
+  background-color secondary
+
+.tertiary-bg--hover
+  background-color tertiary
+
+.pale-bg--hover
+  background-color pale
+
+.light-bg--hover
+  background-color light
+
+.white-bg--hover
+  background-color c_white
+
+.black-bg--hover
+  background-color c_black
+
+.red-bg--hover
+  background-color c_red
+
+.green-bg--hover
+  background-color c_green
+
+.yellow-bg--hover
+  background-color c_yellow
+
+.orange-bg--hover
+  background-color c_orange
+
+.blue-bg--hover
+  background-color c_blue
+
+.violet-bg--hover
   background-color c_violet
 
 /*
