Fixed color hover state classes

--- a/src/style.styl
+++ b/src/style.styl
@@ -90,56 +90,56 @@ a
       color c_violet_hover
 
 /* Hover state overrides for text color */
-.primary--hover,
-a.primary--hover
+.primary--hover:hover,
+a.primary--hover:hover
   color primary
 
-.secondary--hover,
-a.secondary--hover
+.secondary--hover:hover,
+a.secondary--hover:hover
   color secondary
 
-.tertiary--hover,
-a.tertiary--hover
+.tertiary--hover:hover,
+a.tertiary--hover:hover
   color tertiary
 
-.pale--hover,
-a.pale--hover
+.pale--hover:hover,
+a.pale--hover:hover
   color pale
 
-.light--hover,
-a.light--hover
+.light--hover:hover,
+a.light--hover:hover
   color light
 
-.white--hover,
-a.white--hover
+.white--hover:hover,
+a.white--hover:hover
   color c_white
 
-.black--hover,
-a.black--hover
+.black--hover:hover,
+a.black--hover:hover
   color c_black
 
-.red--hover,
-a.red--hover
+.red--hover:hover,
+a.red--hover:hover
   color c_red
 
-.green--hover,
-a.green--hover
+.green--hover:hover,
+a.green--hover:hover
   color c_green
 
-.yellow--hover,
-a.yellow--hover
+.yellow--hover:hover,
+a.yellow--hover:hover
   color c_yellow
 
-.orange--hover,
-a.orange--hover
+.orange--hover:hover,
+a.orange--hover:hover
   color c_orange
 
-.blue--hover,
-a.blue--hover
+.blue--hover:hover,
+a.blue--hover:hover
   color c_blue
 
-.violet--hover,
-a.violet--hover
+.violet--hover:hover,
+a.violet--hover:hover
   color c_violet
 
 /* Background colors */
@@ -183,43 +183,43 @@ a.violet--hover
   background-color c_violet
 
 /* Hover state overrides for background color */
-.primary-bg--hover
+.primary-bg--hover:hover
   background-color primary
 
-.secondary-bg--hover
+.secondary-bg--hover:hover
   background-color secondary
 
-.tertiary-bg--hover
+.tertiary-bg--hover:hover
   background-color tertiary
 
-.pale-bg--hover
+.pale-bg--hover:hover
   background-color pale
 
-.light-bg--hover
+.light-bg--hover:hover
   background-color light
 
-.white-bg--hover
+.white-bg--hover:hover
   background-color c_white
 
-.black-bg--hover
+.black-bg--hover:hover
   background-color c_black
 
-.red-bg--hover
+.red-bg--hover:hover
   background-color c_red
 
-.green-bg--hover
+.green-bg--hover:hover
   background-color c_green
 
-.yellow-bg--hover
+.yellow-bg--hover:hover
   background-color c_yellow
 
-.orange-bg--hover
+.orange-bg--hover:hover
   background-color c_orange
 
-.blue-bg--hover
+.blue-bg--hover:hover
   background-color c_blue
 
-.violet-bg--hover
+.violet-bg--hover:hover
   background-color c_violet
 
 /*
